# git-soc

./: .gitignore  README.md  git-soc  git-soc-all  git-soc.py  pyproject.toml  test.py  test.sh
gitSOC/: __init__.py  managedRepo.py
gitSOC/cmd/: __init__.py  cmd.py  config.py  disable.py  enable.py  fetch.py  fix.py  info.py  interactive.py  linkup.py  pull.py  push.py  pushpull.py  register.py  status.py
gitSOC/tools/: main.py
