[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-soc"
dynamic = ["version"]
description = "A multi-repo manager for git"
readme = "README.md"
license = ""
requires-python = ">=3.7"
authors = [
    { name = "Wes Hardaker", email = "opensource@hardakers.net" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "git",
    "yaml"
]

[project.scripts]
git-soc = "gitSOC.tools.main:main"

[project.urls]
Homepage = "https://github.com/hardaker/git-soc"

[tool.hatch.version]
path = "gitSOC/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/gitSOC",
]

[tool.ruff]
# long lines, unsorted imports, too many args, don't type selfs, or return types
ignore = ["E501", "I001", "PLR0913", "ANN101", "ANN204",
# allow boolean typed position arguments/defaults
"FBT001", "FBT002",
# don't require issues,
"TD003",
# trailing commas is often wrong because of black formatting
"COM812",
# generic typing (list vs List) doesn't work until python 3.8
"UP006",
# Logging statement uses f-string
"G004",
# complaining about simple if/else
"SIM108",
# allow blind exceptions
"BLE001",
# allow for loop variable overrides
"PLW2901",
]
fixable = ["ALL"]  # gulp
# select = ["ALL"]
# select = ["A", "ARG", "C4", "COM", "EM", "E", "ANN"]
